--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="stylesheet" href="carousel.css"/>
+
     <title>Eduardo Weidenbacher</title>
   </head>
   <body>
