cheage meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Eduardo Weidenbacher"
+      content="Soy un desarrollador fullstack apasionado de las nuevas tecnologías. Uso Flutter para aplicaciones móviles y React y Node para aplicaciones web."
     />
+    <meta name="robots" content="index,nofollow">
+    <meta name="distribution" content="global">
+    <meta name="revisit-after" content="14 days">
+    <meta name="keywords" content="developer,desarrollador,react,node,flutter,eldorado,misiones,argentina,eduardo,weidenbacher"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="stylesheet" href="carousel.css"/>
-
-    <title>Eduardo Weidenbacher</title>
+    <title>Eduardo Weidenbacher, Fullstack developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
