cambio el meta tag robots Se agrego NOODP

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
       name="description"
       content="Soy un desarrollador fullstack apasionado de las nuevas tecnologías. Uso Flutter para aplicaciones móviles y React y Node para aplicaciones web."
     />
-    <meta name="robots" content="index,nofollow">
+    <meta name="robots" content="index,nofollow,NOODP">
     <meta name="distribution" content="global">
     <meta name="revisit-after" content="30 days">
-    <meta name="keywords" content="developer,desarrollador,react,node,flutter,eldorado,misiones,argentina,eduardo,weidenbacher"/>
+    <meta name="keywords" content="programador,developer,desarrollador,react,node,flutter,eldorado,misiones,argentina,eduardo,weidenbacher"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
