meta tags actualizados

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Soy un desarrollador fullstack apasionado de las nuevas tecnologías. Uso Flutter para aplicaciones móviles y React y Node para aplicaciones web."
+      content="Fullstack developer | React | Node | Flutter |"
     />
+    <meta name="title" content="Eduardo Weidenbacher Developer">
     <meta name="robots" content="index,nofollow,NOODP">
     <meta name="distribution" content="global">
     <meta name="revisit-after" content="30 days">
-    <meta name="keywords" content="programador,developer,desarrollador,react,node,flutter,eldorado,misiones,argentina,eduardo,weidenbacher"/>
+    <meta name="keywords" content="fullstack,programador,developer,desarrollador,react,node,flutter,eldorado,misiones,argentina,eduardo,weidenbacher"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>Eduardo Weidenbacher, Fullstack developer</title>
+    <title>Eduardo Weidenbacher Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
